Set default jvm args
Signed-off-by: Manuel Stör <m.stoer@microstream.one>